--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3"
 services:
   app:
-    container_name: yelp-camps
+    container_name: toraberu
     restart: always
     build: ./
     ports:
